--- a/SellAir/css/styles.css
+++ b/SellAir/css/styles.css
@@ -85,6 +85,7 @@ body{
 	height:60px;
 	overflow:hidden;
 	background-color:rgb(57, 255, 231);
+	background:linear-gradient(to left, #5CCEFF, #00FFE9, #5CCEFF);
 	color:rgb(8, 8, 8);
 	font-size:22px;
 }
