--- a/SellAir/css/styles.css
+++ b/SellAir/css/styles.css
@@ -138,6 +138,7 @@ body{
     margin-bottom:25px;
     background-color:rgba(255, 255, 255, 1);
 	padding:12px;
+	color:black !important;
 }
 .content{
 	/* outline:1px solid green; */
@@ -190,7 +191,7 @@ body{
 	min-height:320px;
 }
 .newitem{
-	min-height:165px;
+	height:165px;
 	border-radius:7px;
 	background-color:rgb(217, 217, 217);
 	margin-bottom:20px;
@@ -240,310 +241,4 @@ body{
 	float:left;
 	font-size:20px;
 	color:black;
-}
-
-@media(max-width:519px){ /*только мобильные устройства*/
-	#slider{
-		width:100%;
-
-	}
-
-	#wrapper{
-		width:90%;
-	}
-	#baskettext{
-		display:block;
-	}
-	#topbasket{
-		float:left;
-		margin-right:8px;
-	}
-	#num-tov-basket{
-		top:1px;
-	}
-	.slider-nav-item{
-		font-size:17px;
-	}
-	.cont-nav-box{
-		width:50%;
-	}
-
-}
-
-@media (min-width:520px) and (max-width:767px){ /*мобильные устройства в горизонтальном положении или планшеты с небольшим разрешением*/
-	#slider{
-		width:100%;
-	}
-
-	#wrapper{
-		width:90%;
-	}
-	#baskettext{
-		display:block;
-	}
-	#topbasket{
-		float:left;
-		margin-right:8px;
-	}
-	#num-tov-basket{
-		top:1px;
-	}
-	.slider-nav-item{
-		font-size:20px;
-	}
-	.cont-nav-box{
-		width:50%;
-	}
-	.item-img{
-		width:30%;
-		float:left;
-	}
-	.item-info{
-		width:70%;
-		float:right;
-	}
-
-}
-
-@media (min-width:768px) and (max-width:991px){ /*планшеты, нетбуки, или компьютеры с небольшими разрешениями*/
-	#slider{
-		width:720px;
-	}
-
-	#wrapper{
-		width:720px;
-	}
-	.item-img{
-		width:30%;
-		float:left;
-	}
-	.item-info{
-		width:70%;
-		float:right;
-	}
-	.price{
-		right:220px;
-	}
-}
-
-@media (min-width:992px) and (max-width:1199px){ /*планшеты с большими экранами, компьютеры с средними разрешениями экранов*/
-	#slider{
-		width:920px;
-	}
-
-	#wrapper{
-		width:920px;
-	}
-    #topwrapper{
-        width:920px;
-    }
-	.container{
-		width:920px;
-		padding-left:0px !important;
-		padding-right:0px !important;
-	}
-	.item-img{
-		width:30%;
-		float:left;
-	}
-	.item-info{
-		width:70%;
-		float:right;
-	}
-	#itemLeft{
-		width:70%;
-		float:left;
-
-	}
-	#floatRight{
-		float:right;
-		width:30%;
-	}
-}
-
-@media (min-width:1200px) and (max-width:1440px){ /*компьютеры с разрешением чуть больше среднего*/
-	#slider{
-		width:1020px;
-	}
-
-	#wrapper{
-		width:1020px;
-	}
-    #topwrapper{
-        width:1020px;
-    }
-	.container{
-		width:1020px;
-		padding-left:0px !important;
-		padding-right:0px !important;
-	}
-	.item-img{
-		width:30%;
-		float:left;
-	}
-	.item-info{
-		width:70%;
-		float:right;
-	}
-	#itemLeft{
-		width:70%;
-		float:left;
-
-	}
-	#floatRight{
-		float:right;
-		width:30%;
-	}
-}
-
-@media (min-width:1441px){ /*большие экраны*/
-	#slider{
-		width:1120px;
-	}
-
-	#wrapper{
-		width:1120px;
-	}
-    #topwrapper{
-        width:1120px;
-    }
-	.container{
-		width:1120px;
-		padding-left:0px !important;
-		padding-right:0px !important;
-	}
-	.item-img{
-		width:30%;
-		float:left;
-	}
-	.item-info{
-		width:70%;
-		float:right;
-	}
-	#itemLeft{
-		width:70%;
-		float:left;
-
-	}
-	#floatRight{
-		float:right;
-		width:30%;
-	}
-}
-/*Item page*/
-#item{
-
-	overflow:hidden;
-	width:100%;
-	min-height:500px;
-	margin-bottom:20px;
-}
-#itemLeft{
-	overflow:hidden;
-	height:100%;
-	padding:15px;
-}
-#itemRight{
-	height:100%;
-	overflow:hidden;
-}
-#itemInfo{
-	padding:10px;
-	background-color:rgb(240, 240, 240);
-	color:black;
-	font-size:18px;
-	margin-top:15px;
-}
-.itemInfoBox{
-
-	color:black;
-	overflow:hidden;
-	margin:5px;
-}
-#itemPrice{
-	font-size:22px;
-}
-#addToCard{
-	background-color:rgb(255, 168, 0);
-	padding:3px;
-	margin-top:20px;
-
-}
-#addToCard > span{
-	display:block;
-	line-height:40px;
-	text-align:center;
-	color:white;
-	transition:background-color ease 0.5s;
-}
-#addToCard :hover{
-	background-color:rgb(255, 104, 0);
-}
-#itemImage{
-	overflow: hidden;
-	height:380px;
-	margin-bottom:20px;
-	background-color:#cecece;
-}
-#itemDescr{
-	background-color:rgb(240, 240, 240);
-	min-height:120px;
-	padding:20px;
-	font-size:16px;
-}
-#itemDescrTitle > span{
-	font-size:20px;
-	font-weight:bold;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*Item page End*/
-#admincontent{
-	/* outline:1px solid red; */
-	margin:20px 20px 20px 20px ;
-	padding:10px 10px 10px 10px;
-	width:auto;
-	min-height:450px;
-	color:black;
-	background-color:rgb(166, 255, 244);
-	border-radius:15px;
-}
-#admincontent input{
-	margin-bottom:15px;
-	width:120px;
-}
-#admincontent input[type=text]{
-	width:300px;
-}
-#admincontent input[type=number]{
-	width:200px;
-}
-#vozmojnosty a{
-	color:black;
-}
-#admincontent select{
-	color:black;
-	width:200px;
-	margin-bottom:15px;
-}
-#admincontent textarea{
-	width:300px;
-	padding:10px;
-	min-height:100px;
-}
-#intofontsize{
-	font-size:24px;
 }
